--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,9 @@
 // Reset using Normalize
 @import "normalize";
 
+
 // Import fonts from Google
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 // Site configuration
 @import "config"; 
@@ -27,3 +27,5 @@
 
 // If IE support is needed you can add them here or create another stylesheet for specific IE fixes
 
+// Custom
+@import "custom"; 
