--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,3 +4,17 @@
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/responsive-nav.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
+<script async='async' src='https://cdn.mathjax.org/mathjax/latest/MathJax.js' type='text/javascript'>
+    MathJax.Hub.Config({
+        messageStyle: "none",
+         extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
+         jax: ["input/TeX", "output/HTML-CSS"],
+         tex2jax: {
+         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+         displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+     },
+
+     "HTML-CSS": { availableFonts: ["TeX"] }
+
+    });
+</script> 
