--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,6 +67,9 @@
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
+    {% if page.custom_styles %}
+      <link rel="stylesheet" href="{{ "/assets/css/custom/" | append: page.custom_styles | prepend: site.baseurl }}">
+    {% endif %}
     <!--[if IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie.css" | prepend: site.baseurl }}"><![endif]-->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
@@ -74,4 +77,8 @@
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
 
     {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
+
+    {% if page.custom_head %}
+      {% include {{ page.custom_head | prepend: 'custom_head/' }} %}
+    {% endif %}
 </head>
