--- a/_includes/custom_scripts/projects/jk-roboling.html
+++ b/_includes/custom_scripts/projects/jk-roboling.html
@@ -1,6 +1,6 @@
 {% raw %}
     <script>
-        const api = "http://35.232.8.121/write";
+        const api = "https://jk-roboling.dathoangblog.com/write";
 
         let beginningInput = document.getElementById("beginning");
         let quantityInput = document.getElementById("quantity");
