--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
       <meta content="{{ site.url }}/about/" property="article:author">
     {% endif %}
     {% if page.image %}
-      <meta content="{{ site.url }}/assets/img/{{ page.image }}" property="og:image">
+      <meta content="{{ site.baseurl }}/assets/img/{{ page.image }}" property="og:image">
     {% else %}
       <meta content="{{ '/assets/img/background.jpeg' | prepend: site.url }}" property="og:image">
     {% endif %}
