--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,7 +657,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  font-family: "PT Serif", Georgia, Times, serif;
+  font-family: "PT Serif", Times, serif;
   line-height: 1.75;
   font-size: 112.5%;
   color: #111;
