Change Vue version.

--- a/_includes/custom_scripts/projects/image-recognizer.html
+++ b/_includes/custom_scripts/projects/image-recognizer.html
@@ -1,5 +1,5 @@
 {% raw %}
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
   <script src="/assets/js/gonet.js"></script>
 
